# pyudtv

./: .gitignore  README.md  pyproject.toml
pymilvus/: __init__.py  exceptions.py  settings.py  udb_client.py
pymilvus/milvus_client/: base.py  milvus_client.py
pymilvus/orm/: collection.py  schema.py
pymilvus/udb_utils/: math_expression_converter.py  math_expression_match.py  udb_utils.py
