[build-system]
requires = [
  "setuptools >= 78.1.1; python_version >= '3.9'",
  "setuptools <= 75.3.2; python_version == '3.8'",
  "wheel",
  "gitpython",
  "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pymilvus"]

[project]
name="pyudtv"
authors = [
  {name='UNVDB Team', email="services@unvdb.com"},
]
requires-python = '>=3.8'
description = "Python Sdk for UnvDB Vector"
readme = "README.md"
dependencies=[
    "setuptools <= 75.3.2; python_version == '3.8'",
    "setuptools >= 78.1.1; python_version >= '3.9'",
    "orjson>=3.10.15",
    "python-dotenv>=1.0.1, <2.0.0",
    "pandas>=1.2.4",
    "numpy<1.25.0;python_version<='3.8'",
    "numpy>=1.25.0;python_version>'3.8'",
    "psycopg2-binary>=2.9.9",
    "scipy>=1.7.0;python_version<='3.8'",
    "scipy>=1.9.0;python_version>'3.8'",
]

classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]

dynamic = ["version"]

[project.urls]
"repository" = 'https://github.com/unvdb/pyudtv'

[project.optional-dependencies]
dev = [
    "pytest>=5.3.4",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=1.3.4",
]

[tool.setuptools.dynamic]
version = { attr = "_version_helper.version"}

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = []

[tool.coverage.report]
omit = []
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
